Fix Mac button order in Translate bubble.

This CL exposes DialogClientView's kIsOkButtonOnLeftSide constant in
views::PlatformStyle and uses it in the views:: implementation of
TranslateBubble to provide the proper button order in the bubble.

Bug: 814477
Change-Id: I2e4c9576fba01bd270310db7d483eb6a6327b192
Reviewed-on: https://chromium-review.googlesource.com/937884
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: anthonyvd <anthonyvd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539881}
Former-commit-id: 9ee5170bc201ac7f07c44bd033359f62ad65abdc