ui/views/window/dialog_client_view.cc
@@ -33,12 +33,6 @@ namespace {
 // conflict with other groups that could be in the dialog content.
 const int kButtonGroup = 6666;
 
-#if defined(OS_WIN) || defined(OS_CHROMEOS)
-const bool kIsOkButtonOnLeftSide = true;
-#else
-const bool kIsOkButtonOnLeftSide = false;
-#endif
-
 // Returns true if the given view should be shown (i.e. exists and is
 // visible).
 bool ShouldShow(View* view) {
@@ -330,7 +324,7 @@ DialogClientView::GetButtonRowViews() {
   View* first = ShouldShow(extra_view_) ? extra_view_ : nullptr;
   View* second = cancel_button_;
   View* third = ok_button_;
-  if (kIsOkButtonOnLeftSide)
+  if (PlatformStyle::kIsOkButtonLeading)
     std::swap(second, third);
   return {{first, second, third}};
 }
